// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemsList Should render an unordered list 1`] = `
.c1 {
  margin: 0;
  font-weight: 400;
}

.c1.kirk-text-button {
  color: #054752;
  font-size: 16px;
  line-height: 20px;
}

.c1.kirk-text-body,
.c1.kirk-text-bodyStrong {
  color: #708C91;
  font-size: 16px;
  line-height: 20px;
}

.c1.kirk-text-caption {
  color: #708C91;
  font-size: 13px;
  line-height: 16px;
}

.c1.kirk-text-title,
.c1.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c1.kirk-text-display1 {
  color: #054752;
  font-size: 82px;
  line-height: 82px;
}

.c1.kirk-text-display2 {
  color: #054752;
  font-size: 30px;
  line-height: 1.06;
}

.c1.kirk-text-subheader,
.c1.kirk-text-subheaderStrong {
  color: #054752;
  font-size: 22px;
  line-height: 24px;
}

.c1.kirk-text-title,
.c1.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c1.kirk-text-bodyStrong,
.c1.kirk-text-subheaderStrong,
.c1.kirk-text-titleStrong {
  font-weight: 500;
}

.c2 {
  display: inline-block;
  position: relative;
}

.c2 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  padding-top: 16px;
  padding-bottom: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  background: none;
}

.c0.kirk-item--clickable:hover {
  background: #EDEDED;
}

a.c0 {
  background: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(221,221,221,.4);
  -webkit-touch-callout: none;
}

button.c0 {
  cursor: pointer;
  text-align: left;
  width: 100%;
  font-family: inherit;
  outline: none;
  background-color: transparent;
  -webkit-tap-highlight-color: rgba(221,221,221,.4);
  -webkit-touch-callout: none;
}

.c0:disabled {
  cursor: default;
}

.c0 .kirk-item-leftText {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .kirk-item-rightText {
  margin-left: 16px;
  text-align: right;
}

.c0 .kirk-item-title--withBody {
  margin-bottom: 4px;
}

.c0 .kirk-item-leftAddon,
.c0 .kirk-item-rightAddon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .kirk-item-leftAddon {
  margin-right: 16px;
}

.c0 .kirk-item-rightAddon {
  margin-left: 16px;
}

.c0.kirk-item--highlighted .kirk-text-title {
  color: #00AFF5;
}

<ul
  className="jsx-1825249063 kirk-items-list"
  role=""
>
  <li
    className="jsx-1825249063 kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c0"
      href="#1"
    >
      <div
        className="kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c1"
          style={
            Object {
              "color": "#054752",
            }
          }
        >
          Item 1
        </div>
        
      </div>
      
      <div
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c2"
          fill="#708C91"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </div>
    </a>
  </li>
  <li
    className="jsx-1825249063 kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c0"
      href="#2"
    >
      <div
        className="kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c1"
          style={
            Object {
              "color": "#054752",
            }
          }
        >
          Item 2
        </div>
        
      </div>
      
      <div
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c2"
          fill="#708C91"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </div>
    </a>
  </li>
  <li
    className="jsx-1825249063 kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c0"
      href="#3"
    >
      <div
        className="kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c1"
          style={
            Object {
              "color": "#054752",
            }
          }
        >
          Item 3
        </div>
        
      </div>
      
      <div
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c2"
          fill="#708C91"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </div>
    </a>
  </li>
</ul>
`;

exports[`ItemsList Should render an unordered list with some separators 1`] = `
.c1 {
  margin: 0;
  font-weight: 400;
}

.c1.kirk-text-button {
  color: #054752;
  font-size: 16px;
  line-height: 20px;
}

.c1.kirk-text-body,
.c1.kirk-text-bodyStrong {
  color: #708C91;
  font-size: 16px;
  line-height: 20px;
}

.c1.kirk-text-caption {
  color: #708C91;
  font-size: 13px;
  line-height: 16px;
}

.c1.kirk-text-title,
.c1.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c1.kirk-text-display1 {
  color: #054752;
  font-size: 82px;
  line-height: 82px;
}

.c1.kirk-text-display2 {
  color: #054752;
  font-size: 30px;
  line-height: 1.06;
}

.c1.kirk-text-subheader,
.c1.kirk-text-subheaderStrong {
  color: #054752;
  font-size: 22px;
  line-height: 24px;
}

.c1.kirk-text-title,
.c1.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c1.kirk-text-bodyStrong,
.c1.kirk-text-subheaderStrong,
.c1.kirk-text-titleStrong {
  font-weight: 500;
}

.c2 {
  display: inline-block;
  position: relative;
}

.c2 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  padding-top: 16px;
  padding-bottom: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  background: none;
}

.c0.kirk-item--clickable:hover {
  background: #EDEDED;
}

a.c0 {
  background: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(221,221,221,.4);
  -webkit-touch-callout: none;
}

button.c0 {
  cursor: pointer;
  text-align: left;
  width: 100%;
  font-family: inherit;
  outline: none;
  background-color: transparent;
  -webkit-tap-highlight-color: rgba(221,221,221,.4);
  -webkit-touch-callout: none;
}

.c0:disabled {
  cursor: default;
}

.c0 .kirk-item-leftText {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .kirk-item-rightText {
  margin-left: 16px;
  text-align: right;
}

.c0 .kirk-item-title--withBody {
  margin-bottom: 4px;
}

.c0 .kirk-item-leftAddon,
.c0 .kirk-item-rightAddon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .kirk-item-leftAddon {
  margin-right: 16px;
}

.c0 .kirk-item-rightAddon {
  margin-left: 16px;
}

.c0.kirk-item--highlighted .kirk-text-title {
  color: #00AFF5;
}

<ul
  className="jsx-1825249063 kirk-items-list"
  role=""
>
  <li
    className="jsx-1825249063 kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c0"
      href="#1"
    >
      <div
        className="kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c1"
          style={
            Object {
              "color": "#054752",
            }
          }
        >
          Item 1
        </div>
        
      </div>
      
      <div
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c2"
          fill="#708C91"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </div>
    </a>
  </li>
  <li
    className="jsx-1825249063 kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c0"
      href="#2"
    >
      <div
        className="kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c1"
          style={
            Object {
              "color": "#054752",
            }
          }
        >
          Item 2
        </div>
        
      </div>
      
      <div
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c2"
          fill="#708C91"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </div>
    </a>
  </li>
  <li
    className="jsx-1825249063 kirk-items-list-item kirk-items-list-item--withSeparator"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c0"
      href="#3"
    >
      <div
        className="kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c1"
          style={
            Object {
              "color": "#054752",
            }
          }
        >
          Item 3
        </div>
        
      </div>
      
      <div
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c2"
          fill="#708C91"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </div>
    </a>
  </li>
</ul>
`;

exports[`ItemsList Should render an unordered list with the separators classname 1`] = `
.c1 {
  margin: 0;
  font-weight: 400;
}

.c1.kirk-text-button {
  color: #054752;
  font-size: 16px;
  line-height: 20px;
}

.c1.kirk-text-body,
.c1.kirk-text-bodyStrong {
  color: #708C91;
  font-size: 16px;
  line-height: 20px;
}

.c1.kirk-text-caption {
  color: #708C91;
  font-size: 13px;
  line-height: 16px;
}

.c1.kirk-text-title,
.c1.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c1.kirk-text-display1 {
  color: #054752;
  font-size: 82px;
  line-height: 82px;
}

.c1.kirk-text-display2 {
  color: #054752;
  font-size: 30px;
  line-height: 1.06;
}

.c1.kirk-text-subheader,
.c1.kirk-text-subheaderStrong {
  color: #054752;
  font-size: 22px;
  line-height: 24px;
}

.c1.kirk-text-title,
.c1.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c1.kirk-text-bodyStrong,
.c1.kirk-text-subheaderStrong,
.c1.kirk-text-titleStrong {
  font-weight: 500;
}

.c2 {
  display: inline-block;
  position: relative;
}

.c2 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  padding-top: 16px;
  padding-bottom: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  background: none;
}

.c0.kirk-item--clickable:hover {
  background: #EDEDED;
}

a.c0 {
  background: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(221,221,221,.4);
  -webkit-touch-callout: none;
}

button.c0 {
  cursor: pointer;
  text-align: left;
  width: 100%;
  font-family: inherit;
  outline: none;
  background-color: transparent;
  -webkit-tap-highlight-color: rgba(221,221,221,.4);
  -webkit-touch-callout: none;
}

.c0:disabled {
  cursor: default;
}

.c0 .kirk-item-leftText {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .kirk-item-rightText {
  margin-left: 16px;
  text-align: right;
}

.c0 .kirk-item-title--withBody {
  margin-bottom: 4px;
}

.c0 .kirk-item-leftAddon,
.c0 .kirk-item-rightAddon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .kirk-item-leftAddon {
  margin-right: 16px;
}

.c0 .kirk-item-rightAddon {
  margin-left: 16px;
}

.c0.kirk-item--highlighted .kirk-text-title {
  color: #00AFF5;
}

<ul
  className="jsx-1825249063 kirk-items-list kirk-items-list--withSeparators"
  role=""
>
  <li
    className="jsx-1825249063 kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c0"
      href="#1"
    >
      <div
        className="kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c1"
          style={
            Object {
              "color": "#054752",
            }
          }
        >
          Item 1
        </div>
        
      </div>
      
      <div
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c2"
          fill="#708C91"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </div>
    </a>
  </li>
  <li
    className="jsx-1825249063 kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c0"
      href="#2"
    >
      <div
        className="kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c1"
          style={
            Object {
              "color": "#054752",
            }
          }
        >
          Item 2
        </div>
        
      </div>
      
      <div
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c2"
          fill="#708C91"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </div>
    </a>
  </li>
  <li
    className="jsx-1825249063 kirk-items-list-item"
  >
    <a
      className="kirk-item kirk-item--clickable kirk-item-choice c0"
      href="#3"
    >
      <div
        className="kirk-item-leftText"
      >
        <div
          className="kirk-text kirk-text-title c1"
          style={
            Object {
              "color": "#054752",
            }
          }
        >
          Item 3
        </div>
        
      </div>
      
      <div
        className="kirk-item-rightAddon"
      >
        <svg
          aria-hidden={true}
          className="kirk-icon c2"
          fill="#708C91"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <polyline
            fill="none"
            points="9 18 15 12 9 6"
            stroke="#708C91"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeMiterlimit="10"
            strokeWidth="2"
          />
        </svg>
      </div>
    </a>
  </li>
</ul>
`;
